Cache last run code

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
 		<textarea placeholder="Enter Script" class="codesnippet" id="code"></textarea>
 		</div>
 		<button class="save"> Save Script </button> <button class="run-script"> Run Script </button> 
-		<button class="delete"> Delete </button> 
+		<!-- <button class="delete"> Delete </button>  -->
 	</div>
 	<hr />
 
